Added message entity to user.